# ECE1512_A01

./: CMakeLists.txt  main.cpp
img/: eq_hist.tif  eq_img.tif  log_img_2.tif  log_img_25.tif  log_img_3.tif  org_hist.tif  power_img_205.tif  power_img_207.tif  power_img_208_b.tif  power_img_209.tif  power_img_21.tif  power_img_215.tif  power_img_2505.tif  power_img_251.tif  power_img_2515.tif  power_img_305.tif  power_img_31.tif  power_img_315.tif
